--- a/company/index.html
+++ b/company/index.html
@@ -266,7 +266,7 @@
 
     <!-- footer ---------------------------------------------------------------------------->
     <footer id="footer" class="container-fluid" style="background-color: #424141;">
-      <a class="container-fluid" href="#footer"><img src="/img/footer_logo.png" alt="로고" width="242" height="70"></a>
+      <a class="container-fluid" href="#footer"><img src="img/footer_logo.png" alt="로고" width="242" height="70"></a>
       <div class="container" style="color: #eeeeee;padding-top: 50px !important; padding-bottom: 50px !important;">
         ㈜티아이에스정보시스템 / 티아이에스정보기술교육센터 / 대표이사 : 김휘준<br>
         사업자등록번호 : 113-86-70392 / 통신판매업신고 : 제2015-서울영등포-0490호<br>
